--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "app4",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://samatdav.github.io/app4",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
